# CS-104-2018

hw-kim503/: README.md
hw-kim503/hw1/: .gitignore  README.md  first_memtest.cpp  flexCharManager.cpp  flexCharManager.h  hw1.txt  hw1q5.cpp  palindrome.cpp  second_memtest.cpp  simpleCharManager.cpp  simpleCharManager.h
hw-kim503/hw1/hw1_tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  GR1_hw-username.md  Makefile  README.md  a.out  cmake_install.cmake  cmake_problem.py  gen_grade_report.py  q4_palindrome  q5_streams
hw-kim503/hw1/hw1_tests/Testing/: TAG
hw-kim503/hw1/hw1_tests/Testing/20180926-2026/: Test.xml
hw-kim503/hw1/hw1_tests/Testing/Temporary/: CTestCostData.txt
hw-kim503/hw1/hw1_tests/compile-logs/: flex_char_manager.complog  palindrome.complog  simple_char_manager.complog  streams.complog
hw-kim503/hw1/hw1_tests/flex_char_manager/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  flex_char_manager_test  flex_mem_test.cpp  second_memtest_test.cpp
hw-kim503/hw1/hw1_tests/results/: flex_char_manager_formatted.txt  flex_char_manager_result.txt  palindrome_formatted.txt  palindrome_result.txt  simple_char_manager_formatted.txt  simple_char_manager_result.txt  streams_formatted.txt  streams_result.txt
hw-kim503/hw1/hw1_tests/rubric/: flex_char_manager.config  palindrome.config  simple_char_manager.config  streams.config
hw-kim503/hw1/hw1_tests/simple_char_manager/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  first_memtest_test.cpp  simple_char_manager_test  simple_mem_test.cpp
hw-kim503/hw1/hw1_tests/streams/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  streams_test  streams_test.cpp
hw-kim503/hw1/hw1_tests/streams/testFiles/five_words_same_line/: input.txt
hw-kim503/hw1/hw1_tests/streams/testFiles/five_words_separate_lines/: input.txt
hw-kim503/hw1/hw1_tests/streams/testFiles/mixed_whitespace/: input.txt
hw-kim503/hw1/hw1_tests/streams/testFiles/one_word/: input.txt
hw-kim503/hw1/hw1_tests/streams/testFiles/thousand_word_stress_test/: input.txt
hw-kim503/hw1/hw1_tests/test-output/: flex_char_manager-test-stdout.txt  palindrome-test-stdout.txt  simple_char_manager-test-stdout.txt  streams-test-stdout.txt
hw-kim503/hw1/hw1_tests/test_cmake_lib/: 104CompileFlags.cmake  Policies.cmake
hw-kim503/hw1/hw1_tests/testing_utils/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  misc_utils.cpp  misc_utils.h  random_generator.h  runtime_evaluator.cpp  runtime_evaluator.h  user_code_runner.cpp  user_code_runner.h
hw-kim503/hw1/hw1_tests/testing_utils/kwsys/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw-kim503/hw2/: .gitignore  README.md  circular_list_int.cpp  circular_list_int.h  hw2.txt  (+4 more)
hw-kim503/hw6/hw6_tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  GR6_hw-username.md  Makefile  cmake_install.cmake  cmake_problem.py  gen_grade_report.py
hw-kim503/hw6/hw6_tests/Testing/: TAG
hw-kim503/hw6/hw6_tests/Testing/20181204-2233/: Test.xml
hw-kim503/hw6/hw6_tests/Testing/Temporary/: CTestCostData.txt
hw-kim503/hw6/hw6_tests/coloring_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  coloring_checker.cpp  coloring_checker.h  coloring_test  coloring_tests.cpp
hw-kim503/hw6/hw6_tests/coloring_tests/testFiles/Backtracking1/: input.txt  output.txt
hw-kim503/hw6/hw6_tests/coloring_tests/testFiles/Backtracking2/: input.txt  output.txt
hw-kim503/hw6/hw6_tests/coloring_tests/testFiles/LargeGivenMap/: input.txt  output.txt
hw-kim503/hw6/hw6_tests/coloring_tests/testFiles/MaxLetters/: input.txt  output.txt
hw-kim503/hw6/hw6_tests/coloring_tests/testFiles/MaxSize/: input.txt  output.txt
hw-kim503/hw6/hw6_tests/coloring_tests/testFiles/MediumGivenMap/: input.txt  output.txt
hw-kim503/hw6/hw6_tests/coloring_tests/testFiles/OneCountry/: input.txt
hw-kim503/hw6/hw6_tests/coloring_tests/testFiles/SmallGivenMap/: input.txt
hw-kim503/hw6/hw6_tests/coloring_tests/testFiles/WikipediaExample/: input.txt  output.txt
hw-kim503/hw6/hw6_tests/compile-logs/: coloring.complog  heap.complog  search.complog
hw-kim503/hw6/hw6_tests/cs_grading/: grading_tools.py  result_tools.py
hw-kim503/hw6/hw6_tests/heap_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  heap_runtime_test  heap_runtime_tests.cpp  heap_test  heap_tests.cpp
hw-kim503/hw6/hw6_tests/results/: coloring_formatted.txt  coloring_result.txt  heap_formatted.txt  heap_result.txt  search_formatted.txt  search_result.txt
hw-kim503/hw6/hw6_tests/rubric/: coloring.config  heap.config  search.config
hw-kim503/hw6/hw6_tests/search_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  search_test  search_tests.cpp
hw-kim503/hw6/hw6_tests/search_tests/testFiles/26Letters/: input.txt
hw-kim503/hw6/hw6_tests/search_tests/testFiles/Checkerboard/: input.txt
hw-kim503/hw6/hw6_tests/search_tests/testFiles/Concentric/: input.txt
hw-kim503/hw6/hw6_tests/search_tests/testFiles/DiagonalCountries/: input.txt
hw-kim503/hw6/hw6_tests/search_tests/testFiles/Discontiguous/: input.txt
hw-kim503/hw6/hw6_tests/search_tests/testFiles/EqualSmallerCountries/: input.txt
hw-kim503/hw6/hw6_tests/search_tests/testFiles/Micro/: input.txt
hw-kim503/hw6/hw6_tests/search_tests/testFiles/MicroVertical/: input.txt
hw-kim503/hw6/hw6_tests/search_tests/testFiles/ProvidedMap/: input.txt
hw-kim503/hw6/hw6_tests/search_tests/testFiles/Ring/: input.txt
hw-kim503/hw6/hw6_tests/search_tests/testFiles/WindingRing/: input.txt
hw-kim503/hw6/hw6_tests/test-output/: coloring-test-stdout.txt  heap-test-stdout.txt  search-test-stdout.txt
hw-kim503/hw6/hw6_tests/test_cmake_lib/: 104CompileFlags.cmake  CustomTests.cmake
hw-kim503/hw6/hw6_tests/testing_utils/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
hw-kim503/hw6/hw6_tests/testing_utils/kwsys/: CTestTestfile.cmake  Makefile  cmake_install.cmake
hw-kim503/hw6/hw6_tests/testing_utils/libperf/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+115 files in other folders)
